[gd_scene load_steps=6 format=2]

[ext_resource path="res://Battlefield/Battlefield.gd" type="Script" id=1]
[ext_resource path="res://Battlefield/Cards/CardOnField.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Background.png" type="Texture" id=3]
[ext_resource path="res://Battlefield/Cards/EnemyCard.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Enemy_card.png" type="Texture" id=5]

[node name="Battlefield" type="Node2D"]
position = Vector2( 466.54, 366.234 )
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 47.2731, -110.583 )
scale = Vector2( 1.02197, 1 )
texture = ExtResource( 3 )

[node name="CardOnField" parent="." instance=ExtResource( 2 )]
position = Vector2( -176.954, -42.4827 )

[node name="CardOnField2" parent="." instance=ExtResource( 2 )]
position = Vector2( 28.0111, -42.1458 )

[node name="CardOnField3" parent="." instance=ExtResource( 2 )]
position = Vector2( 234.199, -43.2538 )

[node name="EnemyCard" parent="." instance=ExtResource( 4 )]
position = Vector2( -172.632, -252.632 )

[node name="EnemyCard2" parent="." instance=ExtResource( 4 )]
position = Vector2( 20, -252.632 )

[node name="EnemyCard3" parent="." instance=ExtResource( 4 )]
position = Vector2( 232.632, -252.632 )

[node name="Enemy_card" type="Sprite" parent="."]
position = Vector2( 467.278, -272.994 )
texture = ExtResource( 5 )
vframes = 2
hframes = 6
frame = 11
[connection signal="selected" from="CardOnField" to="." method="_on_CardOnField_selected"]
[connection signal="selected" from="CardOnField2" to="." method="_on_CardOnField2_selected"]
[connection signal="selected" from="CardOnField3" to="." method="_on_CardOnField3_selected"]
